<resources>
    <string name="app_name">hbda</string>
    <string name="roll">Roll</string>
    <string name="textview">TextView</string>
    <string name="_1">1</string>
    <string name="put_in_a_number">Put in a Number</string>
    <string name="whats_ya_lucky_numba">whats ya lucky numba</string>
    <string name="space" />
    <string name="lets_see_whatchu_got">Lets See whatchu Got!!</string>
</resources>